--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -2,6 +2,10 @@
     background-color: green;
 }
 
+.cell {
+    padding: 0.3em;
+}
+
 .card {
     background-color: white;
     border-radius: 0.5em;
