--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -4,6 +4,7 @@
 
 .cell {
     padding: 0.3em;
+    position: relative;
 }
 
 .card {
@@ -14,6 +15,7 @@
     width: 4em;
     height: 4.5em;
     border: 0.1em solid black;
+    position: relative;
 }
 
 .red {
